<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Funaab Post-Graduate Handbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_choose_program">Choose Program</string>
    <string name="pref_program_label_pgd">Diploma in Computer Science (PG D)</string>
    <string name="pref_program_label_msc">Master of Science in Computer Science (M.Sc.)</string>
    <string name="pref_program_label_mict">Master of Information and Communication (M. ICT)</string>
    <string name="pref_program_label_phd">Doctor of Philosophy (Ph. D.)</string>
    <string name="pref_program_pgd_value">1</string>
    <string name="pref_program_msc_value">2</string>
    <string name="pref_program_mict_value">3</string>
    <string name="pref_program_phd_value">4</string>
    <string name="pref_choose_program_key">program_list</string>
    <string name="pref_title_choose_font">Font Size</string>
    <string name="pref_font_label_small">Small</string>
    <string name="pref_font_label_normal">Normal</string>
    <string name="pref_font_label_large">Large</string>
    <string name="pref_font_label_extra_large">Huge</string>
    <string name="pref_font_small_value">1</string>
    <string name="pref_font_normal_value">2</string>
    <string name="pref_font_large_value">3</string>
    <string name="pref_font_extra_large_value">4</string>
    <string name="pref_choose_font_key">font_list</string>
    <string name="pref_header_data_sync" tools:keep="@string/pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" tools:keep="@string/pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles" tools:keep="@array/pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" tools:keep="@array/pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries" tools:keep="@array/list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values" tools:keep="@array/list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" tools:keep="@array/multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings" tools:keep="@string/pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications" tools:keep="@string/pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications" tools:keep="@string/pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone" tools:keep="@string/pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent" tools:keep="@string/pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate" tools:keep="@string/pref_title_vibrate">Vibrate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_comp_sci">
        The Department of Computer Science was an option in the then Mathematical Sciences Department established in 1988 at the inception of the University of Agriculture, Abeokuta. 
        In 1998/1999 session, Postgraduate Diploma in Computer Science, Master of Science and Doctor of Philosophy degrees in Computer Science were approved by the Senate. During the 2005/2006 session, the department of Computer Science evolved to become a unique academic division in the production of highly trained postgraduates in the field of Computer Science. 
        In 2006/2007 session, Master of Information and Communication Technology was approved by the Senate. 
        The Department offers programmes leading to the award of Bachelors of Computer Science, Postgraduate Diplomas, Master of Information and Communication Technology, Master of Science and Doctor of Philosophy degrees in Computer Science. 
        Staff members of the Department are in the forefront in the recent areas of computer research work. 
        This has enabled her to produce quality postgraduates who are now occupying various positions in banks, industries, academia and private companies.
    </string>
    <string name="philosophy">
    The programme is designed to give students the opportunity to obtain a broad knowledge in both theory and practice of Computer Science.
    Students will be trained to design frameworks and write programmes for solving different real-life problems.
    Such training will lead to the production of skilled and manpower that is adequately furnished with the current and comprehensive knowledge to do researches in Computer Science as well as Information and Communication Technology which will impact greatly on the socio-economic growth and development of our nation.
</string>
    <string name="objectives">
        "The objectives of the post graduate degree in Computer science are to:\n\n"
"•	Build on the foundation the students have in Computer science by enhancing their knowledge as required for postgraduate studies.\n"
"•	Carry out research work in any field of Computer science.\n"
"•	Develop software that are needed in various sectors of the economy.\n"
"•	Provide timeless research and consultancy services to industries, banks and other critical sectors of the economy.\n"
"•	Profers computer based software, tools and devices which would address the challenges posed on information technology driven global economy/society.\n"

    </string>
    <string name="mission">
        "•	Stimulate sustained interest and enthusiasm in computer science.\n"
        "•	Train students the necessary computing knowledge and skills required to provide effective and timeless computing service.\n"
        "•	Train students with a solid foundation in computer science and knowledge that are required for postgraduate studies and research.\n"
        "•	Conduct research and advance state of the art in computer science and integrate its innovation into other disciplines.\n"
    </string>
    <string name="vision">
    To be the leading department in research and teaching towards the economic growth of the nation through ICT.\n
    </string>
</resources>